--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "ent": "^0.1.0",
     "express": "^3.3.8",
+    "fs": "0.0.1-security",
     "http": "0.0.0",
     "ip": "^1.1.5",
     "socket.io": "^1.2.1"
